Added Redis cache cleaning service
